update het roi, sua catch exception

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,17 +16,12 @@ NotBlank.product.productName=Product Name is required.
 Size.product.productName=Product Name must not exceed 255 characters.
 Pattern.product.productName=Product Name must not contain special characters.
 
-NotNull.product.price=Price is required.
-Min.product.price=Price must be at least 1.
-Max.product.price=Price must not exceed 999,999$
 
-NotNull.product.quantity=Quantity is required.
-Min.product.quantity=Quantity must be at least 1
-Max.product.quantity=Quantity must not exceed the maximum value (2,147,483,647).
+Range.product.price=Price must be between 1 and 10.000.000
 
-NotNull.product.sold=Sold is required.
-Min.product.sold=Sold must be at least 1
-Max.product.sold=Sold must not exceed the maximum value (2,147,483,647).
+Range.product.quantity=Quantity must be between 1 and 10.000.000
+
+Range.product.sold=Sold must be between 0 and 10.000.000
 
 NotBlank.product.color=Color is required.
 Size.product.color=Color must not exceed 255 characters.
